# smart-scan

./: .gitignore  ATC3DG.h  CMakeLists.txt  README.md  Sample.h  Sample.rc  StdAfx.h  TrackStar.cpp  TrackStar.h  main.cpp  readme.md  resource.h
SmartScan/: SmartScan.sln
SmartScan/SmartScanCli/: SmartScanCLI.cpp  SmartScanCli.vcxproj  SmartScanConfig.h
SmartScan/SmartScanService/: SmartScanService.vcxproj  SmartScanService.vcxproj.filters
SmartScanCLI/: SmartScanCLI.sln
SmartScanCLI/SmartScanCLI/: Footmodel.csv  Footmodel2.csv  Footmodel2Raw.csv  MockData.csv  SmartScanCLI.cpp  SmartScanCLI.h  SmartScanCLI.vcxproj  SmartScanCLI.vcxproj.filters  cylinder6.csv
SmartScanCli/: SmartScanCli.vcxproj.filters
SmartScanService/: SmartScanService.sln
SmartScanService/SmartScanService/: CSVExport.cpp  CSVExport.h  DataAcquisition.cpp  DataAcquisition.h  Exceptions.h  Filtering.cpp  Filtering.h  Foot.csv  FootHighFiltering.csv  Point3.cpp  Point3.h  RefOrient.csv  RefOrientRaw.csv  ReferencePoint.cpp  ReferencePoint.h  Scan.cpp  Scan.h  ScanDb.h  SmartScanCLI.cpp  SmartScanCLI.h  SmartScanConfig.h  SmartScanService.cpp  SmartScanService.h  SmartScanService.vcxproj  SmartScanService.vcxproj.filters  Test.csv  Test2.csv  TrakStarController.cpp  TrakStarController.h  Trigger.cpp  Trigger.h  filtered.csv  foot-pc.csv  static-raw.csv  (+3 more)
Test/: Resource.h  Test.def  Test.rc  Test.sln  Test.vcxproj  Test.vcxproj.filters  TestApp.cpp  TestPlugIn.cpp  TestPlugIn.h  cmdTest.cpp  cmdTest2.cpp
simpleble_install/: CMakeLists.txt
smart-scan/: SmartScan.sln
wiki_img/: README.md
(+88 files in other folders)
